<resources>

    <string name="app_name">云账号</string>
    <string name="login">登录</string>
    <string name="regist">注册酷比账号</string>
    <string name="next">下一步</string>
    <string name="skip"><u>跳过</u></string>
    <string name="login_koobee">登录酷比账号</string>
    <string name="username_hint">输入手机号码或邮箱</string>
    <string name="password_hint">输入8&#8211;16位字符密码</string>
    <string name="agree">同意酷比账号的用户协议和隐私政策</string>
    <string name="regist_koobee">注册酷比账号</string>
    <string name="use_own_phone">使用本机号码注册</string>
    <string name="use_own_phone_two"><u>使用本机号码注册</u></string>
    <string name="regist_own_hint">输入8&#8211;16位字符密码</string>
    <string name="use_other_phone"><u>使用其他手机号码注册</u></string>
    <string name="retrieve_password">找回密码</string>
    <string name="use_safe_email">请使用安全邮箱%s获取验证码</string>
    <string name="use_safe_phone">请使用安全手机%s获取验证码短信</string>
    <string name="code_sended">验证码已发送至：</string>
    <string name="msg_security_code">输入验证码</string>
    <string name="send_security_code">发送验证码</string>
    <string name="other_retrieve"><u>使用其他方式找回</u></string>
    <string name="register_success">注册成功</string>
    <string name="register_kb_account_number">注册酷比账号</string>
    <string name="your_kb">你的酷比账号手机是%s用于登录和找回密码</string>
    <string name="your_kb_account">你的酷比账号是本机电话号码用于登录和找回密码</string>
    <string name="complete">完成</string>
    <string name="verify">验证</string>
    <string name="input_password">输入8&#8211;16位字符密码</string>
    <string name="own_information">个人信息</string>
    <string name="base_information">基本信息</string>
    <string name="head_icon">头像</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="account_information">账号信息</string>
    <string name="kb_id">酷比ID</string>
    <string name="safe_phone">安全手机</string>
    <string name="bind_email">绑定邮箱</string>
    <string name="kb_msg_one">云相册、生活服务中心、</string>
    <string name="kb_msg_two">应用中心、游戏中心、音乐等服务</string>
    <string name="kb_msg_three">都是用酷比账号</string>
    <string name="back_login">退出登录</string>
    <string name="please_use_safe_email">请使用安全邮箱获取验证码</string>
    <string name="input_your_email">输入你的邮箱</string>
    <string name="email_security_code">输入邮件验证码</string>
    <string name="bind">绑定</string>
    <string name="complete_bind_email">已绑定邮箱%s</string>
    <string name="cancel_bind_email">取消绑定</string>
    <string name="my_koobee">我的酷比</string>
    <string name="one_koobee_account">一个账号，玩转所有服务</string>
    <string name="regist_new_account">注册新账号</string>
    <string name="please_input_password">输入8&#8211;16位字符新密码</string>
    <string name="confirm_password">再次输入新密码</string>
    <string name="set_password">设置密码</string>
    <string name="confirm">确定</string>
    <string name="lost_password"><u>忘记密码</u></string>
    <string name="input_your_account">请输入你要找回的酷比账号</string>
    <string name="input_phone_or_email">输入手机号或邮箱</string>
    <string name="cancel">取消</string>
    <string name="select_from_photos">从手机相册中选择</string>
    <string name="take_photos">拍照</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="modify_nickname">修改昵称</string>
    <string name="comfire_account">系统需要验证您的酷比账号</string>
    <string name="input_your_account_password">请输入您的账号密码</string>
    <string name="account">账号：</string>
    <string name="forget_password"><u>忘记密码</u></string>
    <string name="input_account_password">请输入账号密码</string>
    <string name="null_password">密码不能为空</string>
    <string name="not_enough_password">密码不能少于八位数</string>
    <string name="network_unavailable">上传失败，请检查网络连接是否可用！</string>
    <string name="upload">正在上传数据，请稍后&#8230;</string>
    <string name="upload_success">上传成功！</string>
    <string name="upload_fail">上传失败！</string>
    <string name="unbind_email">无</string>
    <string name="no_tel">无法获取本机号码，请使用其他手机号注册</string>
    <string name="null_nickname">昵称不能为空</string>
    <string name="wrong_pswd">密码不正确</string>
    <string name="registe_msg_send_fail">注册短信发送不成功.</string>
	<string name="registe_fail">注册失败.</string>
	<string name="network_connection_fail">网络连接失败.</string>
	<string name="code_has_been_send">验证码已发送.</string>
	<string name="account_and_password_notEmpty">账号与密码不能为空.</string>
	<string name="login_successful">登录成功！</string>
	<string name="timeout">连接超时！</string>
	<string name="code_send_fail">验证码发送失败.</string>
	<string name="unbind_failure">失败了，请稍后重试。</string>
	<string name="code_is_ok">验证通过</string>
	<string name="please_input_code">请输入验证码</string>
	<string name="second">秒</string>
	<string name="user_agreement">用户协议</string>
	<string name="please_input_phone">请输入手机号码</string>
	<string name="register">注册</string>
	<string name="msg_send_success">短信发送成功！</string>
	<string name="request_failure">失败了，请稍后重试。</string>
	<string name="register_account">注册账号</string>
	<string name="password_different">两次密码不相同</string>
	<string name="register_account_msg">您的手机将发送一条普通短信用于注册新的酷比账号</string>
	<string name="password_tip">密码长度8&#8211;16位，由数字、字母或英文符号组成</string>
	<string name="failure">失败了，请稍后重试。</string>
	<string name="edit_head_failure">编辑头像失败！</string>
	<string name="check_sdk">请检查SDK是否可用.</string>
	<string name="symbol">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ~:;{}[],.!·€@#$%^*()_-=+*/`|\?﹉&#8230;&lt;&gt;&#165;&#038;\&#039;\&#034;&#8211;\\</string>
	<string name="loging">正在登录，请稍后...</string>
	<string name="checking">正在验证，请稍后...</string>
	<string name="registing">正在注册，请稍后...</string>
	<string name="setpswding">正在设置密码，请稍后...</string>
	<string name="login_failure">登录失败</string>
</resources>
