<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:clipToPadding="false" >
    <TextView
        android:id="@+id/title_id"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="#21b5c0"
        android:drawableLeft="@drawable/back_normal"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:onClick="onBackClk"
        android:text="@string/retrieve_password"
        android:textColor="#ffffff"
        android:textSize="@dimen/textsize_large" />
    
    <TextView
        android:id="@+id/tip_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="17dp"
        android:gravity="center_vertical"
        android:textSize="12sp"
        android:text="@string/use_safe_email"
        android:textColor="@color/prize_text_default"
        android:singleLine="true" >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/msg_code_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/shurukuang"
            android:gravity="center_vertical"
            android:hint="@string/msg_security_code"
            android:paddingLeft="10dp"
            android:textColor="@color/prize_text_default"
            android:textColorHint="#c8c8c8"
            android:textSize="@dimen/textsize_medium"
            android:maxLength="8"
            android:singleLine="true"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/sendtv_code"
            android:layout_width="wrap_content"
            android:minWidth="90dp"
            android:layout_height="match_parent"
            android:textSize="@dimen/textsize_medium"
            android:textColor="#ffffff"
            android:gravity="center"
            android:singleLine="true"
            android:layout_marginLeft="10dp"
            android:text="@string/send_security_code"
            android:background="@drawable/send_security_code">
        </TextView>
    </LinearLayout>
    <TextView
        android:id="@+id/loginbtn_id"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="27dp"
        android:text="@string/verify"
        android:textSize="@dimen/textsize_medium"
        android:gravity="center"
        android:background="@drawable/next_selector"
        android:textColor="@color/login_color"
        android:clickable="true">
    </TextView>
    
     <TextView
       	android:id="@+id/find_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/other_retrieve"
        android:textSize="12sp"
        android:clickable="true"
        android:textColor="@color/other_color"
        android:visibility="gone"
        ></TextView>
    
</LinearLayout>
